# tcpDataCollection

./: README.md
data_collection_middleware/: .gitignore  config.yaml
data_collection_middleware/realtime_communication/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  realtime_communication.pro
data_collection_middleware/realtime_communication/HTTP/: httper.cpp  httper.h
data_collection_middleware/realtime_communication/ROS/: roser.cpp  roser.h
data_collection_middleware/realtime_communication/TCP/: tcper.cpp  tcper.h
data_collection_middleware/realtime_communication/TOOLS/: message..proto  struct.h  tool.cpp  tool.h
data_collection_middleware/realtime_communication/realtime_msgs/src/realtime_msgs/: CMakeLists.txt  package.xml
data_collection_middleware/realtime_communication/realtime_msgs/src/realtime_msgs/msg/: realtime_tcp.msg
